--- a/Function_Numpy_Pandas.ipynb
+++ b/Function_Numpy_Pandas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Function_Numpy_Pandas.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOEv0NdygqlCTfu1EagSWv5",
+      "authorship_tag": "ABX9TyPeOqhFX2fYi70v2nJY2DIZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -264,7 +264,8 @@
         "id": "yk9JYPZKvYb7"
       },
       "source": [
-        "###ฟังก์ชันไม่จำเป็นต้องมี input"
+        "###ฟังก์ชันไม่จำเป็นต้องมี inputtt\r\n",
+        "\r\n"
       ]
     },
     {
