จบ matrix python

--- a/Function_Numpy_Pandas.ipynb
+++ b/Function_Numpy_Pandas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Function_Numpy_Pandas.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMfUTCvbvsi1fcEHqLjA6bV",
+      "authorship_tag": "ABX9TyPezsXsrWsfCfbTrXGj3E/N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -617,7 +617,7 @@
       "source": [
         "import numpy"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -644,7 +644,7 @@
         "mat_ex1 = numpy.array([[5.2,3.0,4.5],[9.1,0.1,0.3]])\r\n",
         "print (mat_ex1)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -677,7 +677,7 @@
       "source": [
         "mat_ex1[1,1]  # [แถว(แนวนอน),หลัก(แนวตั้ง)] และต้องเริ่มจาก0ไปเรี่อยๆ"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -715,7 +715,7 @@
         "list_ex1 = [[5.2,3.0,4.5],[9.1,0.1,0.3]]\r\n",
         "print(list_ex1)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,7 +738,7 @@
       "source": [
         "list_ex1[1][1]  #วิธีเลือกตัวในlistออกมา"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -769,7 +769,7 @@
         "print(a)\r\n",
         "print(a[1])"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,7 +817,7 @@
         "mat_ex2 = numpy.array([[2,3.7,5.9],[91,1.5,7.3]])\r\n",
         "print(mat_ex2)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,7 +854,7 @@
         "mat_ex0 = numpy.array([[1,2],[3,4]])\r\n",
         "print(mat_ex0)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -881,7 +881,7 @@
         "mat_ex4 = mat_ex1 - mat_ex2\r\n",
         "print(mat_ex4)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,7 +908,7 @@
       "source": [
         "mat_ex1 + mat_ex0 "
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -944,7 +944,7 @@
       "source": [
         "mat_ex3.shape"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -972,7 +972,7 @@
       "source": [
         "mat_ex3.shape[0]  #ใช้ดูขนาดแถวของ matrix"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1014,7 +1014,7 @@
       "source": [
         "mat_ex1 * mat_ex2 # การคูณ matrix ไม่ใช้วิธีแบบนี้"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1044,7 +1044,7 @@
       "source": [
         "numpy.dot(mat_ex1,mat_ex2) # ต้องtransposeก่อน"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1075,7 +1075,7 @@
         "print(mat_ex2)\r\n",
         "print(mat_ex2.shape)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1114,7 +1114,7 @@
         "print(mat_ex2)\r\n",
         "print(mat_ex2.shape)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1140,7 +1140,7 @@
         "print(mat_ex2.T)\r\n",
         "print(mat_ex2.T.shape)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1166,7 +1166,7 @@
       "source": [
         "numpy.dot(mat_ex1,mat_ex2.T)  # (2,3).(3,2)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1195,7 +1195,7 @@
       "source": [
         "numpy.dot(mat_ex1.T,mat_ex2)  # (3,2).(2,3) = (3,3)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1258,7 +1258,244 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lKTAX5ASHU0x"
+        "id": "lKTAX5ASHU0x",
+        "outputId": "6aaf9d72-b44a-4a34-ff87-6cf29d705295",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "list_ex1 = [[5.2,3.0,4.5],[9.1,0.1,0.3]]\r\n",
+        "list_ex2 = [[2,3.7,5.9],[91,1.5,7.3]]\r\n",
+        "print(list_ex1)\r\n",
+        "print(list_ex2)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[5.2, 3.0, 4.5], [9.1, 0.1, 0.3]]\n",
+            "[[2, 3.7, 5.9], [91, 1.5, 7.3]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gJxhyGbcrS4F",
+        "outputId": "fd0532c5-8b17-4922-e39c-cbc01125ea07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "list_ex1 + list_ex2"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[5.2, 3.0, 4.5], [9.1, 0.1, 0.3], [2, 3.7, 5.9], [91, 1.5, 7.3]]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aCx9ATPBsvka"
+      },
+      "source": [
+        "## Matrix ที่สำคัญ\r\n",
+        "- identity matrix\r\n",
+        "- all ones\r\n",
+        "- all zeros"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jsBQ5cjEt-Ky"
+      },
+      "source": [
+        "### Identity matrix\r\n",
+        "- square matrix (จำนวนแถว = จำนวนหลัก)\r\n",
+        "- มีเลข 1 อยู่ตรงตำแหน่ง (i,i) (แทยงมุม ซ้ายไปขวา)\r\n",
+        "- ตำแหน่งอื่นๆ มีค่าเป็นเลข 0 "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FvmDob8wsTVc"
+      },
+      "source": [
+        "import numpy as np # as .=hgx]ujpo=njv"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GNA82m81wQGZ",
+        "outputId": "d7b03b1d-7a94-4d8d-9bc4-59bf2c41d082",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "iden3 = np.identity(3)\r\n",
+        "print(iden3)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1. 0. 0.]\n",
+            " [0. 1. 0.]\n",
+            " [0. 0. 1.]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BOPiktLByLdi"
+      },
+      "source": [
+        "### all zeros (คือ matrix ที่ทุกๆค่าเป็นเลข 0)\r\n",
+        "\r\n",
+        "ใช้สำหรับ สร้าง matrix ว่าง ขึ้นมา คล้ายกับ ... = list()\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CJxPlxb7wZXd",
+        "outputId": "6109091e-ced7-4bac-c489-b5756157623b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "test_zeros = np.zeros([5,7])\r\n",
+        "print(test_zeros)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0.]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bWLAe6-11Hb1"
+      },
+      "source": [
+        "### all ones (คือ matrix ที่ทุกๆค่าเป็นเลข 1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2AN8bgir09gq",
+        "outputId": "8277051d-7edb-4cc7-dde1-045d1d9b8d99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "test_ones = np.ones([5,7])\r\n",
+        "print(test_ones)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1.]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9lbkiZxf2Cq1"
+      },
+      "source": [
+        "เวลาเราจะสร้าง matrix ที่ทุกค่าเป็นค่า x (ค่าอื่นๆ)\r\n",
+        "เราจะสร้างโดยใช้\r\n",
+        "คุณสมบัติ scalar muliplication\r\n",
+        "scalar (ปริมาณที่มีขนาดเพียงอย่างเดียว)(ค่าคงที่,ตัวเลข 1 ตัว)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sf8n8syX1hkI",
+        "outputId": "57805bbd-6635-4070-f023-635117e79478",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "15 * test_ones"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[15., 15., 15., 15., 15., 15., 15.],\n",
+              "       [15., 15., 15., 15., 15., 15., 15.],\n",
+              "       [15., 15., 15., 15., 15., 15., 15.],\n",
+              "       [15., 15., 15., 15., 15., 15., 15.],\n",
+              "       [15., 15., 15., 15., 15., 15., 15.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lH1SvOBX3nL6"
       },
       "source": [
         ""
