--- a/Multivariate_Exam.ipynb
+++ b/Multivariate_Exam.ipynb
@@ -1756,9 +1756,124 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lU6fo9-9s13C"
+      },
+      "source": [
+        "# 3.ลด Dimension ของข้อมูลเหลือ 2 มิติ แล้วทำ clustering แล้ว visualize ข้อมูลแบบ 2 มิติ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tP_juypms4I5"
+      },
+      "source": [
+        "### MDS"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "EE3kN8QusNy_"
+      },
+      "source": [
+        "from sklearn.manifold import MDS"
+      ],
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xkB7XTARs6JH"
+      },
+      "source": [
+        "mds = MDS(n_components=2)\n",
+        "# กำหนดว่าเราจะใช้ components ของ mds เป็น 2"
+      ],
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "swEsYNjyxtJ-",
+        "outputId": "b54e8f8b-5455-4068-d200-6ee700a50410",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        }
+      },
+      "source": [
+        "New_mds = mds.fit_transform(Data)\n",
+        "# ทำการคำนวณข้อมูล คำนวณระยะห่างระหว่างจุด"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-70854f571b4a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mNew_mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mData\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# ทำการคำนวณข้อมูล คำนวณระยะห่างระหว่างจุด\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'mds' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i4jblgdAtBBK"
+      },
+      "source": [
+        "### K-means"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v3NsfgvUs-bg"
+      },
+      "source": [
+        "kmeans2 = KMeans(n_clusters=4,random_state=2021)  # กำหนด k = 4 ตามค่า k ที่เหมาะสม\n",
+        "kmeans2.fit(Data)\n",
+        "g = kmeans2.predict(Data)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "56FtzKFotFde"
+      },
+      "source": [
+        "กำหนดกลุ่ม k = 4 ตามการหาค่า k ที่เหมาะสมข้างต้น "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XVezhRQKtDqL"
+      },
+      "source": [
+        "plt.scatter(New_mds[:,0],New_mds[:,1],c=g,alpha=0.7)\n",
+        "plt.title('DataGenerator') \n",
+        "plt.xlabel('X') \n",
+        "plt.ylabel('Y');"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P37Y5pO1tLhD"
       },
       "source": [
         ""
